--- a/Baking/app/src/main/res/layout/fragment_recipe.xml
+++ b/Baking/app/src/main/res/layout/fragment_recipe.xml
@@ -50,7 +50,8 @@
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/colorPrimaryDark">
 
         <!--<android.support.design.v7.widget.AppBarLayout-->
             <!--android:layout_width="match_parent"-->
