--- a/Baking/app/src/main/res/values/colors.xml
+++ b/Baking/app/src/main/res/values/colors.xml
@@ -45,7 +45,7 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#18ffff</color>
+    <color name="colorPrimaryDark">#40e0d0</color>
+    <color name="colorAccent">#ffee58</color>
 </resources>
