--- a/Baking/app/src/main/res/layout/fragment_step_detail.xml
+++ b/Baking/app/src/main/res/layout/fragment_step_detail.xml
@@ -52,6 +52,10 @@
         <variable
             name="step"
             type="com.example.full_dream.baking.model.Step"/>
+
+        <variable
+            name="callback"
+            type="com.example.full_dream.baking.fragment.StepDetailFragment"/>
     </data>
 
     <android.support.constraint.ConstraintLayout
@@ -110,6 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/prev_button"
+            android:onClick="@{() -> callback.playPrevious()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/button_next"
             app:layout_constraintHorizontal_chainStyle="packed"
@@ -120,6 +125,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/next_button"
+            android:onClick="@{() -> callback.playNext()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/button_prev"/>
